Adjusting about me image sizing, fixed overflow on larger screens.

--- a/styles/style.css
+++ b/styles/style.css
@@ -257,7 +257,6 @@ header {
     background-image: url(/images/about-bg.jpg);
     background-size: cover;
     background-blend-mode: multiply;
-    background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
@@ -266,7 +265,6 @@ p + p {
 }
 
 @media (min-width: 900px) {
-
     .about-me {
         display: grid;
         grid-template-areas:
@@ -274,7 +272,7 @@ p + p {
             'subtitle image'
             'content image';
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 0.1fr 0.1fr 2fr;
+        grid-template-rows: 0.1fr 0.1fr 0.8fr;
         padding-left: 5em;
         padding-right: 5em;
     }
@@ -286,32 +284,32 @@ p + p {
     .section__subtitle--about {
         grid-row: 2 / 2 ;
         width: calc(100% + 25.5em);
-        position: aboslute;
     }
     
     .about-me__body {
         grid-row: 3;
         margin-right: 3.5em;
-        padding: 1em;
+        padding: 2em;
     }
 
     .about-me__body--image {
         grid-row: 1 / 3;
+        justify-self: center;
         box-shadow: 
             0.25em 0.25em 0.75em rgba(0,0,0,0.25),
             0.125em 0.125em 0.25em rgba(0,0,0,0.15);
     }
 }
 
-@media (min-width: 1500px) {
+/* @media (min-width: 1500px) {
     .about-me {
         padding-left: 12em;
         padding-right: 12em;
     }
-}
+} */
 
 /* To do for about me:
-- Image needs fixing - shrinking when reducing screen size.
+- Image is overflowing when viewed on smaller screen. Fixed issue with larger screens.
 */
 
 /* Projects section - Temporary: Work in progress. Create responsive where images enlarge with size.*/
